@@ -1,4 +1,7 @@
 - centralize common textdomains in a single common place, thus ensuring they'll be binded (#31580)
+- diskdrake:
+  o fix resizing's faillures due to udev's race when writing the partition
+    table (deleting then recreating the nodes leaves a race window...)
 - service_harddrake (blino):
   o do not enable fglrx libraries when disabling fglrx...
   o really log when switching from fglrx to another driver
